--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,6 +42,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: api-sftp-client
           environment_name: Apisftpclient-env
-          version_label: Sample Application
-          region: us-west-2
+          version_label: Api Sftp Client
+          region: ap-southeast-1
           deployment_package: api-sftp-client.zip
