--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,29 +19,40 @@
 
 #       - name: Build
 #         run: go build -mod=vendor -o api-sftp-client .
+
 name: Go
+
 on:
   push:
-    branches:
-      - master
+    branches: [master]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Generate deployment package
-        run: zip -r api-sftp-client.zip . -x '*.git*'
+      - name: Create ZIP deployment package
+        run: zip -r api-sftp-client.zip ./
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: api-sftp-client
-          environment_name: Apisftpclient-env
-          version_label: Api Sftp Client
-          region: ap-southeast-1
-          deployment_package: api-sftp-client.zip
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: "ap-southeast-1"
+
+      - name: Upload package to S3 bucket
+        run: aws s3 cp api-sftp-client.zip s3://api-sftp-client/
+
+      - name: Create new ElasticBeanstalk Application Version
+        run: |
+          aws elasticbeanstalk create-application-version \
+          --application-name api-sftp-client \
+          --source-bundle S3Bucket="api-sftp-client",S3Key="api-sftp-client.zip" \
+          --version-label "ver-${{ github.sha }}" \
+          --description "commit-sha-${{ github.sha }}"
+
+      - name: Deploy new ElasticBeanstalk Application Version
+        run: aws elasticbeanstalk update-environment --environment-name api-sftp-client-env-1 --version-label "ver-${{ github.sha }}"
